# gerador-e-checker-de-cpf

./: .flake8  .gitignore  README.md  pyproject.toml
cpf/: __init__.py  main.py
tests/: basic_test.py
