[tool.poetry]
name = "cpf"
version = "3.0.0a"
description = "Gera e checa CPFs de acordo com o padrão brasileiro."
authors = ["pedrokp <pedrokp@protonmail.com>"]
homepage = "https://github.com/pedrokpp/gerador-e-checker-de-cpf"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
flake8-black = "^0.3.6"
flake8 = "^6.0.0"
flake8-docstrings = "^1.7.0"
flake8-isort = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.pydocstyle]
match_dir = '^(?!tests)[^\.].+$'

[tool.pytest.ini_options]
addopts = "-vvv --cov-report=term-missing --cov=cpf"
testpaths = ["tests"]
log_level = "DEBUG"
